--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Rilevazione Acustica Todays 2024</title>
  </head>
- <body>     
-     <h1 id="display">42</h1>
-     <h3>dB LAeq 10"</h3>
+ <body>
+    <div>dB LAeq 1'</div>     
+    <div id="min1">42</div>
+    <br> </br>
+    <div>dB LAeq 10'</div>     
+    <div id="min10">42</div>
+    <br> </br>
+    <div>dB LAeq 30'</div>     
+    <div id="min30">42</div>
+    <div> </div>
+     
  </body>
  <style>
       body {
@@ -29,7 +37,9 @@
     });
 
     function getLastNRowsFromGoogleSheet() {
-      const url = `https://docs.google.com/spreadsheets/d/1-4rdXZ7kTRsVGQJ2H4JChhEl4PlmJE42/gviz/tq?tqx=responseHandler:myCallback`;
+      //const url = `https://docs.google.com/spreadsheets/d/1-4rdXZ7kTRsVGQJ2H4JChhEl4PlmJE42/gviz/tq?tqx=responseHandler:myCallback`;
+      const url = `https://docs.google.com/spreadsheets/d/1-ChzNRGrvaDVfi1l1Z-wSCbsDCq4RbXu/gviz/tq?tqx=responseHandler:myCallback`;
+
       const script = document.createElement('script');
       script.src = url;
       document.body.appendChild(script);
@@ -38,15 +48,37 @@
         const rows = data.table.rows;
         const lastRow = rows[rows.length - 1];
         const lastValue = lastRow.c[1].v;
+        
 
         //fai la media delle ultime 10 righe
-        var sum = 0;
-        for (var i = rows.length - 10; i < rows.length; i++) {
-          sum += rows[i].c[1].v;
+        if (rows.length -5>=10){
+          var sum10 = 0;
+          for (var i = rows.length - 10; i < rows.length; i++) {
+            valore=rows[i].c[1].v;
+            sum10 += 10**(0.1*valore);
+          }
+          avg10= 10*(Math.log10(sum10/10))
+          document.getElementById('min10').innerHTML=avg10.toFixed(1);
         }
-        var avg = sum / 10;
+        else{
+          document.getElementById('min10').innerHTML="ND";
+        }
 
-        document.getElementById('display').innerHTML=avg.toFixed(1);
+        //fai la media delle ultime 30 righe
+        if (rows.length -5>=30){
+          var sum30 = 0;
+          for (var i = rows.length - 30; i < rows.length; i++) {
+            valore=rows[i].c[1].v;
+            sum30 += 10**(0.1*valore);
+          }
+          avg30= 10*(Math.log10(sum30/30))
+          document.getElementById('min30').innerHTML=avg30.toFixed(1);
+        }
+        else{
+          document.getElementById('min30').innerHTML="ND";
+        }
+
+        document.getElementById('min1').innerHTML=lastValue.toFixed(1);
       };
     }
   </script>
