--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           font-family: Arial, sans-serif;
           color: white;
           text-align: center;
+          font-size: 50px;
           background-color: black;
           margin: 0;
           padding: 0;
