eliminata visualizzazione su 1 minuto

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
      <title>Rilevazione Acustica Todays 2024</title>
  </head>
  <body>
-    <div>dB LAeq 1'</div>     
-    <div id="min1">42</div>
-    <br> </br>
     <div>dB LAeq 10'</div>     
     <div id="min10">42</div>
     <br> </br>
@@ -79,7 +76,7 @@
           document.getElementById('min30').innerHTML="ND";
         }
 
-        document.getElementById('min1').innerHTML=lastValue.toFixed(1);
+        //document.getElementById('min1').innerHTML=lastValue.toFixed(1);
       };
     }
   </script>
